--- a/examples/shared-todo/src/client/style.css
+++ b/examples/shared-todo/src/client/style.css
@@ -208,6 +208,11 @@ label[for='toggle-all'] {
     background-color: lightgreen;
 }
 
+.todo-details {
+    display: flex;
+    justify-content: space-between;
+}
+
 .todo-list li label {
     white-space: pre-line;
     word-break: break-all;
@@ -216,6 +221,20 @@ label[for='toggle-all'] {
     display: block;
     line-height: 1.2;
     transition: color 0.4s;
+}
+
+.todo-list li .todo-owner {
+    white-space: pre-line;
+    word-break: break-all;
+    padding: 15px 60px 15px 15px;
+    margin-left: 45px;
+    display: block;
+    line-height: 1.2;
+    transition: color 0.4s;
+}
+
+.todo-owner.unassigned {
+    color: #d9d9d9;
 }
 
 .todo-list li.completed label {
