Basics of assigning todos / having a current user

--- a/examples/shared-todo/src/client/style.css
+++ b/examples/shared-todo/src/client/style.css
@@ -237,6 +237,19 @@ label[for='toggle-all'] {
     color: #d9d9d9;
 }
 
+.owners-footer {
+    color: #777;
+    padding: 10px 15px;
+    height: 20px;
+    text-align: center;
+    border-top: 1px solid #e6e6e6;
+    display: flex;
+}
+
+.owner-name {
+    flex: 0 0 auto;
+}
+
 .todo-list li.completed label {
     color: #d9d9d9;
     text-decoration: line-through;
@@ -307,6 +320,12 @@ label[for='toggle-all'] {
 
 .todo-count strong {
     font-weight: 300;
+}
+
+.owners-filters {
+    flex: 1 0 0%;
+    /* !important b/c I don't want to refactor the .filters css */
+    position: static !important;
 }
 
 .filters {
@@ -400,6 +419,10 @@ html .clear-completed:active {
 
 @media (max-width: 430px) {
     .footer {
+        height: 50px;
+    }
+
+    .owners-footer {
         height: 50px;
     }
 
